Various z-index tweaks to the demo app. Also fixing some focus borders to be neutral colored instead of theme colored.

--- a/src/components/ContextualMenu/ContextualMenu.scss
+++ b/src/components/ContextualMenu/ContextualMenu.scss
@@ -185,7 +185,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  border: 1px solid $ms-color-themePrimary;
+  border: 1px solid $ms-color-neutralTertiary;
 }
 
 .ms-ContextualMenu-beak {
