--- a/src/components/Link/Link.scss
+++ b/src/components/Link/Link.scss
@@ -2,5 +2,5 @@
 @import "~office-ui-fabric/src/components/Link/Link";
 
 .ms-Fabric.is-focusVisible .ms-Link:focus {
-  outline: 1px solid $ms-color-themePrimary;
+  outline: 1px solid $ms-color-neutralTertiary;
 }
