--- a/src/demo/components/app/App.scss
+++ b/src/demo/components/app/App.scss
@@ -9,6 +9,7 @@ body {
   height: 50px;
   left: 0;
   right: 0;
+  z-index: 10000;
 }
 
 .App-navBar {
