--- a/src/demo/components/navBar/NavBar.scss
+++ b/src/demo/components/navBar/NavBar.scss
@@ -114,7 +114,7 @@
 }
 
 .ms-Fabric.is-focusVisible .NavBar-link:focus:before {
-  border: 1px solid $ms-color-themePrimary;
+  border: 1px solid $ms-color-neutralTertiary;
 }
 
 .NavBar-link.is-selected:before,
